added js for clock to change the color with hex codes

--- a/clock.html
+++ b/clock.html
@@ -3,13 +3,15 @@
 <head>
 	<title>Color Clock!</title>
 	<link rel="stylesheet" type="text/css" href="clock.css">
-	<script type="text/javascript" src="clock.js"></script>
+
 </head>
 
-<body onload="startTime()">
+<body id="myClock">
 
-<div class="clock"></div>
+<div id="clock"></div>
 
+<h1>Look at my color changing clock!</h1>
 
+<script type="text/javascript" src="clock.js"></script>
 </body>
 </html>
